objects/CRMforNonProfit__George_Notifications__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CRMforNonProfit__Account_Id__c</fullName>
        <label>Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Notification_URL__c</fullName>
        <label>Notification URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>George Notifications</label>
</CustomObject>